<resources>
    <string name="app_name">GreasePay</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_log_in">LOG IN</string>
    <string name="title_activity_sign_up_screen">SignUpScreen</string>
    <string name="cd_fb_sign_in">Facebook Sign in</string>
    <string name="cd_google_sign_in">Google sign in</string>
    <string name="or">OR</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="prompt_phone">Phone</string>
    <string name="title_activity_home_screen">HomeScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit_profile">edit profile</string>
    <string name="home_tab_heading_bars">Bar/Clubs</string>
    <string name="home_tab_heading_restaurants">Restaurants</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="server_error">Some error occured while fetching data.Please try agin.</string>
    <!-- Strings for outlet details screen -->
    <string name="outlet_details_tab_heading_greasepay">GREASEPAY</string>
    <string name="outlet_details_tab_heading_events">UPCOMING EVENTS</string>
    <string name="outlet_details_tab_about">ABOUT</string>
    <string name="no_of_men">No. of Men</string>
    <string name="no_of_women">No. of Women</string>
    <string name="payment_heading_greasepay_for">GreasePay for</string>
    <string name="title_activity_event_screen">EventScreen</string>
    <string name="title_activity_card_details">CardDetails</string>
    <string name="entry_free">Entry for everyone is free</string>
    <string name="entry_free_men">Entry for men is free</string>
    <string name="entry_free_women">Entry for women is free</string>
    <string name="payment_heading_greasepay_for_men">Greasepay for one men : </string>
    <string name="payment_heading_greasepay_for_women">Greasepay for one women : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_check_terms">Please checked terms and conditions</string>
    <string name="please_check_save">Please check save card</string>
</resources>
