<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.LoginActivity">

    <ImageButton
        android:id="@+id/login_button_fbLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/facebook_login"
        android:contentDescription="@string/cd_fb_sign_in" />

    <ImageButton
        android:id="@+id/login_button_googleLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/google_login"
        android:contentDescription="@string/cd_google_sign_in" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
       style="@style/EditTextInputTextStyle">

        <EditText
            android:id="@+id/login_edit_username"
            style="@style/EditTextStyle"
            android:hint="@string/prompt_email"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/EditTextInputTextStyle">

        <EditText
            android:id="@+id/login_edit_password"
            style="@style/EditTextStyle"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
      />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button_loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_rounded"
        android:text="@string/prompt_log_in"
        android:textColor="@color/colorButtonText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="Click here to SignUp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login_button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_rounded"
        android:text="@string/sign_up"
        android:textColor="@color/colorButtonText" />
</LinearLayout>

